docs/v7.1/classes/E22.md
---
layout: page
title: E22 Objet élaboré par l’humain
titleEn: E22 Human-Made Object - Objet élaboré par l’humain
permalink: /v7.1/classes/E22
sidebar: v71
group: classes
date: 2023-05-25
description: Le CIDOC CRM est le standard qu’utilisent de nombreuses organisations pour l’échange et l’intégration de jeux de données et de spécifications patrimoniales. Il est développé et maintenu à jour exclusivement en anglais par le CRM SIG, un sous-groupe du Conseil international des musées (ICOM). Ceci est une traduction officielle en français développée par la Traduction en français du CIDOC CRM, une initiative qui offre une version française à jour et accessible ouvertement et gratuitement du standard CIDOC CRM et en démocratise l'usage dans la communauté patrimoniale francophone. ------------ The CIDOC CRM is the standard used by many heritage organizations for the exchange and integration of museum collection datasets and specifications. It is developed and maintained exclusively in English by the CRM SIG, a subgroup of the International Council of Museums (ICOM). This is an official translation developed by the Traduction en français du CIDOC CRM, an initiative offering an open, up-to-date, and free French version of the CIDOC CRM standard, and democratizing its use in the francophone heritage community.
---

**Date de création** : 2020-05-03

**Dernière mise à jour** : 2023-05-25

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><strong>Sous-classe de</strong></td>
<td class="en">
<p>E19 Physical Object</p>
<p>E24 Physical Human-Made Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E19_Objet_matériel</code></p>
<p><code class="language-plaintext highlighter-rouge">E24_Chose_matérielle_élaborée_par_l’humain</code></p>
</td>
</tr>
<tr>
<td><strong>Super-classe de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Note d’application</strong></td>
<td class="en">
<p>This class comprises all persistent physical objects of any size that are purposely created by human activity and have physical boundaries that separate them completely in an objective way from other objects. </p>
<p>The class also includes all aggregates of objects made for functional purposes of whatever kind, independent of physical coherence, such as a set of chessmen.</p>
</td>
<td>
<p>Cette classe comprend tous les objets physiques persistants, quelle que soit leur taille, qui sont créés intentionnellement par l’activité humaine et qui possèdent des limites physiques qui les séparent complètement et objectivement des autres objets.</p>
<p>Cette classe inclut aussi toutes les agrégations d’objets produits pour de quelconques buts fonctionnels, indépendamment de leur cohérence physique, comme un ensemble de pièces de jeu d’échecs. </p>
</td>
</tr>
<tr>
<td><strong>Exemples</strong></td>
<td class="en">
<ul>
<li><p>Mallard (the World’s fastest steam engine) (Solomon, 2003)</p>
</li>
<li><p>the Portland Vase (Walker, 2004)</p>
</li>
<li><p>the Coliseum (Hopkins, 2005)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>La Mallard (la locomotive à vapeur la plus rapide du monde) (Solomon, 2003)</p>
</li>
<li><p>Le vase Portland (Walker, 2004)</p>
</li>
<li><p>Le Colisée (the Coliseum) (Hopkins, 2005)</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><strong>Logique</strong></td>
<td class="en">
<p>E22(x) ⇒ E19(x)</p>
<p>E22(x) ⇒ E24(x)</p>
</td>
<td>
<p>E22(x) ⇒ E19(x)</p>
<p>E22(x) ⇒ E24(x)</p>
</td>
</tr>
<tr>
<td><strong>Propriétés</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong><em>Note de traduction</em></strong></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><strong><em>Références</em></strong></td>
<td colspan="2">
</td>
</tr>
</tbody>
</table>
