docs/v7.1.2/classes/E22.md
---
layout: page
title: E22 Objet élaboré par l’humain
titleEn: E22 Human-Made Object - Objet élaboré par l’humain
permalink: /v7.1.2/classes/E22
sidebar: v712
group: classes
date: 2023-12-22
---

**Date de création** : 2023-11-08

**Dernière mise à jour** : 2023-12-22

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><p><strong>Sous-classe de</strong></p></td>
<td class="en">
<p>E19 Physical ObjectE24 Physical Human-Made Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E19_Objet_matériel</code><code class="language-plaintext highlighter-rouge">E24_Chose_matérielle_élaborée_par_l’humain</code></p>
</td>
</tr>
<tr>
<td><p><strong>Super-classe de</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong>Note d’application</strong></p></td>
<td class="en">
<p>This class comprises all persistent physical objects of any size that are purposely created by human activity and have physical boundaries that separate them completely in an objective way from other objects. </p>
<p>The class also includes all aggregates of objects made for functional purposes of whatever kind, independent of physical coherence, such as a set of chessmen.</p>
</td>
<td>
<p>Cette classe comprend tous les objets physiques persistants, quelle que soit leur taille, qui sont créés intentionnellement par l’activité humaine et qui possèdent des limites physiques qui les séparent complètement et objectivement des autres objets.</p>
<p>Cette classe inclut aussi toutes les agrégations d’objets produits pour de quelconques buts fonctionnels, indépendamment de leur cohérence physique, comme un ensemble de pièces de jeu d’échecs. </p>
</td>
</tr>
<tr>
<td><p><strong>Exemples</strong></p></td>
<td class="en">
<ul>
<li><p>the Rosetta Stone (E22)</p>
</li>
<li><p>LNER Class A4 4468 Mallard [the World’s fastest steam locomotive, preserved at the National Railway Museum of York, UK] (Solomon, 2003)</p>
</li>
<li><p>the Portland Vase (Walker, 2004)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>La pierre de rosette (Rosetta Stone) (<code class="language-plaintext highlighter-rouge">E22_Objet_élaboré_par_l’humain</code>)</p>
</li>
<li><p>La Mallard LNER Class A4 4468 (la locomotive à vapeur la plus rapide du monde conservée au National Railway Museum of York au Royaume-Uni) (Solomon, 2003)</p>
</li>
<li><p>Le vase Portland (Walker, 2004)</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><p><strong>Logique</strong></p></td>
<td class="en">
<p>E22(x) ⇒ E19(x)E22(x) ⇒ E24(x)</p>
</td>
<td>
<p>E22(x) ⇒ E19(x)E22(x) ⇒ E24(x)</p>
</td>
</tr>
<tr>
<td><p><strong>Propriétés</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong><em>Note de traduction</em></strong></p></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><p><strong><em>Références</em></strong></p></td>
<td colspan="2">
<p><em></em></p>
</td>
</tr>
</tbody>
</table>
